--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.johndoe.notendesktop" >
+    package="com.example.user.notendings" >
+
+    <uses-sdk
+        android:minSdkVersion="11">
+        </uses-sdk>
 
     <application
         android:allowBackup="true"
@@ -8,7 +12,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.johndoe.notendesktop.MainActivity"
+            android:name="com.example.user.notendings.MainActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
