--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:logo="@drawable/ic_launcher"
+        android:theme="@style/Base.Theme.AppCompat.Light" >
         <activity
             android:name="com.example.user.notendings.MainActivity"
             android:screenOrientation="portrait"
